--- a/style.css
+++ b/style.css
@@ -3,6 +3,27 @@ a:link { text-decoration:none; color:#333333;}
 a:hover { text-decoration:none; color:#0000FF;}
 a:visited { text-decoration:none; color:#333333;}
 
+#collapsibleNavbar a:hover{ text-decoration:underline; 
+    color:#FFFFFF; 
+    font-weight:bold; 
+}
+#collapsibleNavbar a:link{ text-decoration:underline; 
+    color:#FFFFFF; 
+    font-weight:bold; 
+}
+#collapsibleNavbar a:visited{ text-decoration:underline; 
+    color:#FFFFFF; 
+    font-weight:bold; 
+}
+.dropdown-menu a:hover { 
+    text-decoration:underline;
+    color:#333333;
+}
+.dropdown-menu a:hover, .dropdown-menu a:visited {
+    text-decoration:underline;
+    color:#333333;
+}
+
 .ellipsis {
     white-space: nowrap;
     overflow: hidden;
